# DEF-W9-21_MineInsight

./: .gitignore  ASSETS.md  CLAUDE.md  DATASET_DOWNLOAD_GUIDE.txt  DATA_DOWNLOAD_INDEX.md  DETAILED_DOWNLOAD_GUIDE.md  Dockerfile.serve  NEXT_STEPS.md  PIPELINE_MAP.md  PIVOT_PLAN.md  PRD.md  README.md  anima_module.yaml  docker-compose.serve.yml  download_mineinsight_full.sh  download_mineinsight_minimal.sh  pyproject.toml
configs/: debug.toml  fusion.toml  lwir.toml  paper.toml  paper_v2.toml  v3_fusion_attention.toml  v3_fusion_concat.toml  v3_fusion_hires.toml  v3_fusion_hires_concat.toml  v3_lwir.toml  v3_rgb.toml  v3_yolo26.toml  v5_fusion_hires.toml  yolo26_rgb.toml
configs/archive/: _eval_v5.toml  lwir_v2.toml  v3_fusion_attention.toml  v3_fusion_concat.toml  v3_fusion_hires.toml  v3_fusion_hires_concat.toml  v3_rgb.toml  v4_fusion_hires.toml  v5_1_fusion_hires.toml  v5_2_fusion_hires.toml  (+2 more)
csrc/: mineinsight_cuda_ops.cu  setup.py
docker/: Dockerfile.cuda  Dockerfile.mlx  docker-compose.yaml
prds/: PRD-01-foundation.md  PRD-02-core-model.md  PRD-03-loss-functions.md  PRD-04-training-pipeline.md  PRD-05-evaluation.md  PRD-06-export-pipeline.md  PRD-07-integration.md
scripts/: build_fusion_dataset.py  cache_dataset.py  eval_comprehensive.py  eval_yolo26_fusion.py  evaluate.py  find_batch_size.py  launch_fusion_on_lwir_done.sh  pretrain_coco.py  split_data.py  train.py  train_cu.py  train_fusion.py  train_yolo26_fusion.py  visualize_detections.py
tasks/: INDEX.md
tests/: test_cuda_ops.py  test_dataset.py  test_label_remap.py  test_model.py
(+12 files in other folders)
